refactor(OPENAPI): :art: WIP - Remove endpoint POST de updates a pet de dentro do contrato
